# orion

./: .env.example  .gitignore  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  tasks.py
orion/: __main__.py  app.py  asgi.py
orion/app/categories/: __init__.py  database.py  deps.py  repositories.py  routers.py  schemas.py  services.py
orion/app/products/: __init__.py  database.py  deps.py  repositories.py  routers.py  schemas.py  services.py
orion/app/tasks/: database.py  routers.py
orion/core/: admin.py  apis.py  constants.py  enums.py  exceptions.py  log.py  middlewares.py  settings.py
orion/core/auto/: admin.py  reouters.py  routers.py  schemas.py
orion/core/database/: db.py  deps.py  engine.py
orion/core/schemas/: db.py  test.py
orion/core/users/: configure_app.py  database.py  deps.py  service.py
